Move background image up 40px to avoid vertical scrollbar on all pages. Not really the right way to do it but ok for now...

--- a/opuntia_imagestream/package/luci-theme-opuntia/files/htdocs/cascade.css
+++ b/opuntia_imagestream/package/luci-theme-opuntia/files/htdocs/cascade.css
@@ -2550,6 +2550,7 @@ div.cbi-value var.cbi-tooltip-container,
 	background-repeat: repeat-x;
         min-height: 100vh;
         padding: 4px 5px 5px;
+	margin-top: -40px;
 }
 #maincontent {
 	background: #fff;
